fix: set height to 100% scale to prevent overflow and scrollingon landingpage

--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,5 +1,5 @@
 .landing-wrapper {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
